# python-project-lvl1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: flake8_lint.yml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: calc.py  even.py  gsd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_gsd.py  brain_prime.py  brain_progression.py
