[tool.poetry]
name = "hexlet-code"
version = "0.2.2"
description = """
    include 'brain-even' - Answer \"yes\" if the number is even, otherwise answer \"no\"
    include 'brain-calc - What is the result of the expression?
    include 'brain-gcd - Find the greatest common divisor of given numbers.
    include 'brain-progression - What number is missing in the progression?
    include 'brain-prime - Answer \"yes\" if given number is prime. Otherwise answer \"no\".
    """

classifiers = [
    "Topic :: Games/Entertainment",
]

authors = ["Mqtaw <Mqtaw@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

repository = "https://github.com/Mqtaw/python-project-lvl1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
